--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,10 @@
 }
 
 body {
+  height: 100vh;
   display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   padding: 0;
   background: var(--primary-color);
@@ -33,6 +36,7 @@ body {
 .timer {
   display: flex;
   flex-direction: column;
+  max-height: 9.5rem;
   align-items: center;
   justify-content: center;
   max-width: 800px;
@@ -40,7 +44,7 @@ body {
 
   background: var(--color-white);
   padding: 20px;
-  border-radius: 30%;
+  border-radius: 45%;
 }
 
 .timer__logo {
